<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manhattan Project</string>
    <string name="action_settings">Ajustes</string>
    <string name="buttonNew">Nueva partida</string>
    <string name="buttonPlayers">Jugadores</string>
    <string name="buttonCards">Tarjetas</string>
    <string name="buttonLoad">Cargar partida</string>
    <string name="title_activity_players">Jugadores</string>
    <string name="title_activity_new_player">Nuevo Jugador</string>
    <string name="title_activity_cards">Tarjetas</string>
    <string name="title_activity_new_card">Nueva Tarjeta</string>
    <string name="title_activity_view_player">Jugador</string>
    <string name="title_activity_new_game">Nueva Partida</string>
    <string name="title_activity_teams">Equipos</string>
    <string name="title_activity_create_teams">Formar Equipos</string>
    <string name="title_activity_saved_games">Partidas Guardadas</string>
    <string name="title_activity_game_summary">Resumen Partida</string>
    <string name="players_empty_list">No hay jugadores</string>
    <string name="button_add_player">Nuevo jugador</string>
    <string name="text_new_player_added">Nuevo jugador añadido</string>
    <string name="textName">Nombre</string>
    <string name="save">Guardar</string>
    <string name="hello_world">cambiaaar</string>
    <string name="delete">Borrar</string>
    <string name="button_add_card">Nueva tarjeta</string>
    <string name="cards_empty_list">No hay ninguna tarjeta</string>
    <string name="textTitle">Titulo</string>
    <string name="textDescription">Descripción</string>
    <string name="text_new_card_added">Nueva tarjeta añadida</string>
    <string name="title_activity_view_card">Tarjeta</string>
    <string name="who_plays">¿Quién juega?</string>
    <string name="button_continue">Continuar</string>
    <string name="new_teams">Nuevos equipos</string>
    <string name="players_per_team">Jugadores por equipo</string>
    <string name="team_number">Numero de equipos</string>
    <string name="empty_teams">Lista de equipos vacía</string>
    <string name="text_min_players">El número mínimo de jugadores es 4</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <string name="title_activity_next_turn">NextTurnActivity</string>
    <string name="next_player">El siguiente en jugar es:</string>
    <string name="next_player_guess">Adivina:</string>
    <string name="next_team">Equipo:</string>
    <string name="round1">Ronda 1</string>
    <string name="round3">Ronda 3</string>
    <string name="round2">Ronda 2</string>
    <string name="rule_round1">reglas ronda 1</string>
    <string name="rule_round2">reglas ronda 2</string>
    <string name="rule_round3">Reglas ronda3 </string>
    <string name="title_activity_round">RoundActivity</string>
    <string name="title_activity_turn_end">TurnEndActivity</string>
    <string name="textEnd">Final del turno</string>
    <string name="textEndMessage">Se acabó tu turno.</string>
    <string name="pass">Pasar tarjeta</string>
    <string name="correct">Acierto!</string>
    <string name="title_activity_end_round">EndRoundActivity</string>
    <string name="empty_players">No hay jugadores</string>
    <string name="correct_cards">Comprueba que las respuestas son correctas</string>
    <string name="title_activity_start_round">StartRoundActivity</string>
    <string name="start">Empezar</string>
    <string name="round_end">Fin de la ronda</string>

</resources>
