<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.teampruli.manhattanproject.TeamsActivity"
    android:id="@+id/teamsLayout">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="35"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/players_per_team" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:id="@+id/pickerPlayers" />

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="0dp"
            android:layout_weight="35"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/team_number" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:id="@+id/pickerTeams" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/new_teams"
            android:id="@+id/button_new_teams"
            android:onClick="clickNewTeams" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_continue"
            android:id="@+id/button_continue"
            android:onClick="clickContinue" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamsView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/empty_list"
        android:text="@string/empty_teams" />

</LinearLayout>
